--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,9 @@
     <title>Fake-Store</title>
     <link rel="stylesheet" href="output.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
