--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="output.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+        <h1>Fake Store</h1>
+    </header>
     <main></main>
     <footer></footer>
   </body>
