--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <header>
-        <h1>Fake Store</h1>
+      <h1>Fake Store</h1>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
     </header>
     <main></main>
     <footer></footer>
