applied classes on header

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="output.css" />
   </head>
   <body>
-    <header>
-      <h1>Fake Store</h1>
-      <ul>
+    <header class="flex flex-col sm:flex-row items-center justify-between bg-gray-700 p-3">
+      <h1 class="text-2xl text-white">Fake Store</h1>
+      <ul class="hidden sm:flex gap-20 text-xl text-white">
         <li><a href="#">Home</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">Login</a></li>
