--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fake-Store</title>
     <link rel="stylesheet" href="output.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <header class="flex flex-col sm:flex-row items-center justify-between bg-gray-700 p-3">
+    <header
+      class="flex flex-col sm:flex-row items-center justify-between bg-gray-700 p-3"
+    >
       <h1 class="text-2xl text-white">Fake Store</h1>
       <ul class="hidden sm:flex gap-20 text-xl text-white">
         <li><a href="#">Home</a></li>
