added a div to store products

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
         <li><a href="#">Login</a></li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <div class="products"></div>
+    </main>
     <footer></footer>
   </body>
 </html>
