--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       </ul>
     </header>
     <main>
-      <div class="products"></div>
+      <div class="products grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div>
     </main>
     <footer></footer>
   </body>
